test/cases/compile_errors/stage1/obj/comptime_continue_inside_runtime_if_bool.zig
export fn entry() void {
    var p: usize = undefined;
    comptime var q = true;
    inline while (q) {
        if (p == 11) continue;
        q = false;
    }
}

// error
// backend=stage1
// target=native
//
// tmp.zig:5:22: error: comptime control flow inside runtime block
// tmp.zig:5:9: note: runtime block created here
